# Agent-O-Matic

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  harness.toml
.cursor/rules/: agent-behavior.mdc  anti-gold-plating.mdc  artifact-first-release.mdc  biscuit-auth.mdc  code-style.mdc  core-values.mdc  factual-style.mdc  four-axes.mdc  response-blocks.mdc  rust-core.mdc  security-baseline.mdc  sovereign-stack.mdc  stack-authority.mdc  testing-strategy.mdc  web-boundary.mdc
.github/workflows/: ci.yml  contracts.yml  orchestrator-loop.yml  security.yml
.harness/: lock.toml
ci-templates/: README.md  bolt-cos-matic.yml
content/domains/: artifact-first-release.md  biscuit-auth.md  native-escape-hatches.md  rust-core.md  sovereign-stack.md  stack-authority.md  testing-strategy.md  web-boundary.md
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: automerge.rs  branch_policy.rs  deploy.rs  dispatch.rs  forge.rs  goals.rs  lib.rs  pipeline.rs
docs/: codex-routine.md  local-llm.md  orchestrator-runbook.md  public-readiness.md  secrets.md  versioning.md
docs/adr/: 0006-workspace-and-orchestrator-charter.md  0008-github-via-octocrab.md  0008-workspace-and-orchestrator-charter.md  0009-goals-safe-declarative-checks.md  0010-drift-as-ci-gate.md  0011-workspace-and-orchestrator-charter.md  0014-dispatch-bounded-fixer.md  0015-autonomous-merge.md  0017-end-to-end-loop.md  0018-publish-step.md  0020-merge-gate-waits-for-checks.md  (+8 more)
domains/: core-values.md
scripts/: live-loop-smoke.sh
src/: error.rs  generate.rs
tests/: e2e.rs
(+22 files in other folders)
