[package]
name = "orchestrator"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# A1 (goals & gates) needs only serde + toml. The dependency on `agent-o-matic`
# is deferred until the drift gate (which calls the compiler) is wired.
[dependencies]
serde.workspace = true
toml.workspace = true
